--- a/site/Index.html
+++ b/site/Index.html
@@ -5,8 +5,97 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <link rel="stylesheet" href="/style.css"> -->
 </head>
+<style>
+
+    *{
+      margin: 0!important;
+      padding: 0;
+    }
+    body {
+      box-sizing:content-box; 
+      background-color: #222831;
+    }
+
+    /* NavBar */
+    .container-nav {
+        display: -webkit-box;
+        display: flex;
+        justify-content: space-around;
+        -webkit-box-align: center;
+            align-items: center;
+        background-color: black;
+        margin: 25px 0;
+        box-shadow: 0 5px 15px -10px #111;
+    }
+    .logo {
+        -webkit-box-ordinal-group: 1;
+            order: 1;
+        border-radius: 100%;
+        background: #4382d6;
+        box-shadow: 0 0 0 3px #fff, 000 15px #111;
+        line-height: 32px;
+        padding: 42px;
+        background-image: url(./AirVision.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    .item {
+        color: rgba(255, 255, 255, 0.88);
+        text-decoration: none;
+        font-family: sans-serif;
+        padding: 24px;
+    }
+    .item:hover{
+        
+        color: #4382d6;
+        background: rgba(255, 255, 255, 0.15);
+    }
+
+    .item:nth-of-type(n+4) {
+  -webkit-box-ordinal-group: 3;
+          order: 2;
+
+    }
+    @media all and (maxwidth: 800px){
+        .container {
+            -webkit-box-orient: vertical ;
+            -webkit-box-direction: normal;
+                flex-direction: column;
+            -webkit-box-align: stretch;
+                align-items: stretch;
+        }
+        .logo {
+            -webkit-box-ordinal-group: 1;
+                order: 0;
+            text-align: center;
+            width: 100px;
+            margin: auto auto 20px;
+
+        }
+        .item {
+            text-align: center;
+            border-bottom: 1px solid #111;
+        }
+    }
+</style>
 <body>
     
+<header>
+    <div class="container-nav">
+
+        <div class="logo"></div>
+        <a href="" class="item">Inicio</a>
+        <a href="" class="item">Quem Somos</a>
+        <a href="" class="item">Contato</a>
+        <a href="" class="item">Orçamentos</a>
+        <a href="" class="item">Nossa solução</a>
+        <a href="" class="item">Login</a>
+
+
+    </div>
+</header>
+
 </body>
 </html>
