--- a/site/Index.html
+++ b/site/Index.html
@@ -24,7 +24,7 @@
 
     </div>
 </header>
-
+<div class="banner">
 <div id="items-wrapper " style="padding: 0px ; height: 0px;">
     <br>
     <p>
@@ -36,8 +36,8 @@
       <div class="item-carrosel"><img class="img-carrosel" src="https://i.em.com.br/7KdXJfX_ijU6u2ILO7k4GC1hPQ4=/790x/smart/imgsapp.em.com.br/app/noticia_127983242361/2022/01/10/1336624/terminal-do-aeroporto_1_57198.jpg"/></div>
       <div class="item-carrosel"><img class="img-carrosel" src="https://cdn.panrotas.com.br/portal-panrotas-statics/media-files-cache/302231/39ac331079912d9e14567207eaee5cf9fotogugamatosaeroporto005/0,72,2560,1528/1206,720,0.18/0/default.jpg"/></div>
     </div>
-  </div>
-
+</div>
+dsadsa
 <!-- dsahdskjahdsjkahdjkashdksa speearançado -->
 
 
@@ -46,7 +46,7 @@
             <h3>Mussum impsum</h3>
             <p>Mussum Ipsum, cacilds vidis litro abertis. Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis.</p>
             <ul class="socials">
-                <li><a href="#" class="fa fa-github"></a></li>
+                <li><a href="https://github.com/LuanaHamaishi/totensAeroporto" target="_blank" class="fa fa-github"></a></li>
                 <li><a href="#" class="fa fa-instagram"></a></li>
                 <li><a href="#" class="fa fa-facebook"></a></li>
             </ul>
