--- a/site/NossaSolucao.html
+++ b/site/NossaSolucao.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="AirVision.png" type="image/x-icon">
-    <title>Login e cadastro</title>
+    <title>Nossa Solução</title>
     <link rel="stylesheet" href="Style.css">
 </head>
 
@@ -16,12 +16,12 @@
         <div class="container-nav">
 
             <div onclick="paginaInic()" class="logo"></div>
-            <a href="./Index.html" class="item">Inicio</a>
-            <a href="./QuemSomos.html" class="item">Quem Somos</a>
-            <a href="./Contato.html" class="item">Contato</a>
-            <a href="./Orcamentos.html" class="item">Orçamentos</a>
-            <a href="./NossaSolucao.html" class="item">Nossa solução</a>
-            <a href="./LoginECadastro.html" class="item">Login</a>
+            <a href="Index.html" class="item">Inicio</a>
+            <a href="QuemSomos.html" class="item">Quem Somos</a>
+            <a href="Contato.html" class="item">Contato</a>
+            <a href="Orcamentos.html" class="item">Orçamentos</a>
+            <a href="NossaSolucao.html" class="item">Nossa solução</a>
+            <a href="LoginECadastro.html" class="item">Login</a>
 
 
         </div>
@@ -33,6 +33,6 @@
 
 <script>
     function paginaInic() {
-        window.location = './Index.html';
+        window.location = './index.html';
     }
 </script>
