--- a/site/QuemSomos.html
+++ b/site/QuemSomos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="AirVision.png" type="image/x-icon">
-    <title>Orçamentos</title>
+    <title>Quem somos</title>
     <link rel="stylesheet" href="Style.css">
 </head>
 
@@ -26,6 +26,13 @@
 
         </div>
     </header>
+ <!-- MVV -->
+    <div class="container-mvv">
+        <div class="mvv">
+            <div class="missao"></div>
+            <div class="visao"></div>
+            <div class="valores"></div>
+        </div>
 
 </body>
 
